# skyroads_port

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  MIGRATION.md  README.md  START_HERE.md  pyproject.toml
docs/: README.md  architecture.md  audio_recovery.md  cpuless_standalone.md  demos_and_snapshots.md  enhancements.md  execution_architecture.md  execution_atlas.md  handoff_cpuless_frontier.md  hardware_support.md  hooks_and_verification.md  lifecycle.md  native_gameplay_presentation.md  pitfalls.md  porting_new_game.md  rendering_recovery.md  replay_verification.md  roadmap.md  state_mirrors.md  transition_ownership_audit.md  verification_contracts.md
examples/: README.md
prompts/: promote_hook_to_subsystem.md  start_new_game_adapter.md  write_recovery_status.md
recovery/: boundary_heads.txt  observed_entry_points.txt  recovery_ir.json  replay_base_entries.txt
scripts/: audit_replay_ownership.py  augment_recovery_ir.py  build_atlas.py  build_boot_image.py  build_codemap.py  build_cpuless_corpus.py  build_cpuless_standalone.py  build_recovered.py  capture_render_parity.py  check_all.py  check_replay.py  close_vmless_wall.py  compare_replay_observables.py  coverage_audit.py  enrich_replay.py  expand_vmless_frontier.py  export_release.py  find_boundary_heads.py  find_dispatch_evidence.py  find_dispatch_targets.py  find_replay_base_entries.py  find_snapshot_entries.py  inspect_presentation_replay.py  inspect_render_scene.py  materialize_replay_timeline.py  overnight_loop.sh  play.py  play_cpuless.py  play_cpuless_hybrid.py  play_native.py  play_vmless.py  probe_gameplay_levels.py  profile_replay_latency.py  promote_replay.py  reachability_audit.py  rebuild_all.py  record_atlas_evidence.py  recover_projection_calibration.py  report_gameplay_corpus.py  verify_cpuless.py  (+1 more)
skyroads/: __init__.py  atlas_evidence.py  audio.py  authored_inventory.py  content_identity.py  cpuless_backend.py  cpuless_driver.py  cpuless_overrides.py  crash_report.py  development_guard.py  device_config.py  execution.py  frame_verify.py  gameplay_corpus.py  gameplay_region.py  hooks.py  identities.py  input_waits.py  island_bodies.py  island_shadows.py  islands.py  launch_inputs.py  levels.py  pacing.py  product_features.py  release.py  release_launcher.py  replay.py  runtime.py  state_view.py  verification.py  verification_contracts.py  vmless_backend.py
tests/: replay_support.py  test_3_0_contract.py  test_anim.py  test_artifact_discipline.py  test_asm_and_taxonomy.py  test_asm_helpers.py  test_audio_events.py  test_audio_pacing.py  test_blit.py  test_boot.py  test_bootstrap_device_profile.py  test_check_all.py  test_classify.py  test_collision_response.py  test_controls.py  test_core.py  test_cpuless_overrides.py  test_cpuless_smoke.py  test_cpuless_standalone_smoke.py  test_crash_settle.py  test_decay_gate.py  test_dos_re_smoke.py  test_dynamics.py  test_effect_avoidance.py  test_exe_image.py  test_execution_architecture.py  test_execution_atlas.py  test_execution_replay_integration.py  test_frame_park.py  test_frame_verify.py  test_gameplay_corpus.py  test_gameplay_corpus_contract.py  test_gameplay_region.py  test_gameplay_region_lifecycle.py  test_generation_inputs.py  test_hud.py  test_hud_grav.py  test_hud_progress.py  test_input_demo.py  test_intro_anim.py  (+64 more)
tools/: absorption_ledger.py  audit_hook_oracle.py  audit_layers.py  check_undefined_names.py  clean.py  display.py  gen_island_manifest.py  lindis.py  lint.py  lint_cpuless.py  profile_demo.py  (+4 more)
(+849 files in other folders)
