[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyroads-source-port"
version = "0.1.0"
description = "Evidence-driven SkyRoads recovery workspace built on dos_re"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "missingno7" }]
requires-python = ">=3.11"
dependencies = []
keywords = ["dos", "reverse-engineering", "emulator", "8086", "source-port", "oracle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: System :: Emulators",
]

[project.urls]
Repository = "https://github.com/missingno7/skyroads_port"

[tool.pytest.ini_options]
# "." for skyroads/, "dos_re" for the framework submodule (dos_re/ here is the
# submodule's own repo root, not the package itself -- that's dos_re/dos_re/).
pythonpath = [".", "dos_re"]
# Collect only the skyroads suite and use importlib import mode: putting the
# dos_re submodule root on pythonpath also exposes its own dos_re/tests/
# package, whose top-level name "tests" collides with this repo's tests/. The
# default prepend import mode let one shadow the other and broke collection
# outright ("No module named 'tests.test_*'"); importlib imports each test file
# without that same-name package aliasing.
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[project.optional-dependencies]
viewer = [
    "numpy>=1.23",
    "pygame>=2.5",
]
test = [
    "pytest>=8",
    "pytest-xdist>=3",  # parallel suites: python -m pytest tests -q -n auto
]
adlib = [
    "cffi>=1.15",
]

[tool.setuptools.packages.find]
# dos_re is an external submodule now (its own package, installed separately
# via `pip install -e dos_re/`), not part of this project's own sources.
include = ["skyroads*"]
